# rpc2.0

./: Cargo.toml  README.md
rpc-cli/: .gitignore  Cargo.toml  README.md
rpc-cli/src/: main.rs
rpc-lib/: .gitignore  Cargo.toml  README.md
rpc-lib/examples/: basic.rs
rpc-lib/src/: client.rs  error.rs  lib.rs
