[package]
authors = ["Dean Karn <dean.karn@gmail.com>"]
description = "cli for making RPC 2.0 requests"
license = "MIT"
name = "rpc-cli"
repository = "https://github.com/rust-playground/rpc2.0/tree/master/rpc-cli"
version = "0.2.0"

[dependencies]
clap = "2.31.2"
failure = "0.1.2"
openssl-probe = "0.1.2"
serde = "1.0.66"
serde_json = "1.0.20"

[dependencies.rpc-lib]
path = "../rpc-lib"
