[package]
authors = ["Dean Karn <dean.karn@gmail.com>"]
edition = "2018"
description = "cli for making RPC 2.0 requests"
license = "MIT"
name = "rpc-cli"
repository = "https://github.com/rust-playground/rpc2.0/tree/master/rpc-cli"
version = "0.3.0"

[dependencies]
clap = "2.32.0"
failure = "0.1.3"
openssl-probe = "0.1.2"
serde = "1.0.82"
serde_json = "1.0.33"

[dependencies.rpc-lib]
path = "../rpc-lib"
