[package]
authors = ["Dean Karn <dean.karn@gmail.com>"]
description = "Contains Client for making RPC 2.0 requests"
edition = "2018"
license = "MIT"
name = "rpc-lib"
repository = "https://github.com/rust-playground/rpc2.0/tree/master/rpc-lib"
version = "0.3.0"

[dependencies]
base64 = "0.10.0"
failure = "0.1.3"
failure_derive = "0.1.3"
reqwest = "0.9.5"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
